<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BankNote</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to BankNote.</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="logo_pic">logo picture</string>
    <string name="title_activity_register_screen">Register_screen</string>
    <string name="registration_header">Register for BankNote</string>
    <string name="registration_filler">Please enter the following information to register an account.</string>
    <string name="prompt_username">Username</string>
    <string name="verify_password">Verify Password</string>
    <string name="title_activity_login_success">Login Success!</string>
    <string name="title_activity_fin__account__reg">Fin_Account_Reg</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="add_account">New Account</string>
    <string name="add_finacc_message">Adding new financial account:</string>
    <string name="finacc_type1">VISA</string>
    <string name="finacc_type2">MASTER</string>
    <string name="finacc_type3">AMERICAN EXPRESS</string>
    <string name="finacc_type4">PAYPAL</string>
    <string name="finacc_displayname">Display Name</string>
    <string name="finacc_fullname">Account Fullname</string>
    <string name="finacc_balance">Balance ( eg. $100.00 )</string>
    <string name="finacc_interest_rate">Interest Rate ( eg. 7.51% )</string>
    <string name="finacc_add_button">Add Account</string>
    <string name="view_accounts">View Accounts</string>
    <string name="title_activity_add_fin_account">AddFinAccount</string>
    <string name="title_activity_add_trans_screen">AddTransScreen</string>
    <string name="done">Done</string>
    <string name="trans_new">New Transaction</string>
    <string name="trans_amount_eg">e.g $10.80</string>
    <string name="trans_add_instruction">Please input the details of the new transaction.</string>
    <string name="trans_type">type of transaction</string>
    <string name="income">INCOME</string>
    <string name="outcome">OUTCOME</string>
    <string name="title_activity_financial_account_main">FinancialAccountMain</string>
    <string name="view_acc">View Account</string>
    <string name="add_trans">Add Transaction</string>
    <string name="trans_description">Description</string>
    <string name="add">Add</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="get_report">Get Report</string>
    <string name="reports">Reports</string>
    <string name="set_start_date">Set Start Date</string>
    <string name="set_end_date">Set End Date</string>
</resources>
