<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddTransScreen" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dashboardtext"
            android:layout_width="248dp"
            android:layout_height="82dp"
            android:gravity="top"
            android:text="@string/trans_new"
            android:textColor="@color/dark_purple"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/trans_add_instruction"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trans_type"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trans_amount_eg"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/add_transaction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="goToFinAcc"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/done" />

    </LinearLayout>

</RelativeLayout>
