<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Fin_Account_Reg" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/add_finacc_message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:gravity="center"
            android:text="@string/add_finacc_message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_purple"
            android:textSize="20sp" />
        
    </LinearLayout>
    
    <!-- Login form -->
    
    <ScrollView
        android:id="@+id/add_finacc_form"
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="match_parent" >

       <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
	            android:layout_height="0dp"
	            android:layout_weight="0.12"
	            android:contentDescription="@string/welcome"
	            android:src="@drawable/logo_big"/>

            <EditText
                android:id="@+id/finacc_fulname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/finacc_fullname"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/finacc_displayname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/finacc_displayname"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/finacc_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/finacc_balance"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/finacc_interest_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/finacc_interest_rate"
                android:maxLines="1"
                android:singleLine="true" />
           

            <Button
                android:id="@+id/finacc_reg_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/finacc_add_button"
                android:onClick="attemptLogin" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
