<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Welcome_screen" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/text_field_finacc_displayname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/finacc_displayname"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/text_field_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/finacc_fullname"
            android:inputType="text" />

        <EditText
            android:id="@+id/text_field_finacc_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/finacc_balance"
            android:inputType="numberDecimal" />
        
        <EditText
            android:id="@+id/text_field_finacc_interest_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/finacc_interest_rate"
            android:inputType ="numberDecimal" />
            
        <Button
                android:id="@+id/button_finacc_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/finacc_add_button"
                android:onClick="makeNewFinAcc" />
        
    </LinearLayout>

</RelativeLayout>