<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Welcome_screen" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:contentDescription="@string/welcome"
            android:src="@drawable/logo_big" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_purple"
            android:textSize="30sp" />
        
        <Button
            android:id="@+id/login_button"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textColor="@color/dark_purple"
            android:textSize="20sp"
            android:onClick="goToLogInScreen"  />

        <Button
            android:id="@+id/reg_button"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:textSize="20sp" 
            android:text="@string/register"
            android:textColor="@color/dark_purple"
            android:onClick="goToRegisterScreen" />



    </LinearLayout>

</RelativeLayout>